<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global strings -->
    <string name="app_name">Lagerix</string>
    <string name="status_communication_error">Communication with server failed. Please check your settings.</string>
    <string name="status_unexpected_result">Unexpected server response</string>
    <string name="ipAddress_default">localhost:8080</string>

    <!-- REST resource URIs -->
    <string name="restURI_login1">/lagerix/services/auth/loginAndroid</string>
    <string name="restURI_login2">/lagerix/secure/j_security_check</string>
    <string name="restURI_logout">/lagerix/services/auth/logout</string>
    <string name="restURI_bookEntry">/lagerix/services/secure/android/saveEntry</string>
    <string name="restURI_search">/lagerix/services/secure/android/search</string>
    <string name="restURI_yards">/lagerix/services/secure/android/yards</string>
    <string name="restURI_storageOverview">/lagerix/services/secure/android/storageOverview</string>

    <!-- Action bar strings -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_storageOverview">Storage Overview</string>

    <!-- Strings related to barcode scanning -->
    <string name="scan_barcode">Scan barcode</string>
    <string name="identified_barcode_article">Identified article ID:</string>
    <string name="identified_barcode_storage">Identified storage location ID:</string>
    <string name="book_in">Book In</string>
    <string name="book_out">Book Out</string>
    <string name="send_data">Send data</string>
    <string name="status_book_successful">Book successful</string>
    <string name="status_book_failed_doesNotExist">Article or yard does not exist</string>
    <string name="status_book_failed_yardOccupied">Yard already occupied</string>
    <string name="status_book_failed_articleAlreadyStored">Article is already stored in a yard</string>
    <string name="status_book_failed_articleNotStoredInYard">Article is not stored in this yard</string>
    <string name="status_barcodeScan_failed">Error scanning barcode</string>
    <string name="status_information_incomplete">Book entry incomplete</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_credentials">Username or password incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="status_not_authorized">You have no permission to access this application</string>

    <!-- Strings related to logout -->
    <string name="title_activity_logout">Sign out</string>
    <string name="action_logout">Sign out</string>
    <string name="logout_progress_signing_out">Signing out&#8230;</string>

    <!-- Strings related to settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_ipAddress_name">Server address</string>
    <string name="pref_ipAddress_defaultValue">https://10.185.45.1:8181</string>

    <!-- Strings related to search form -->
    <string name="label_search_intro">Enter a search key to search for articles:</string>
    <string name="label_search_articleName">Article type name:</string>
    <string name="label_search_articleDescription">Article type description:</string>
    <string name="title_activity_search_form">Article search</string>
    <string name="title_activity_search_result">Result</string>

    <!-- Strings related to search results -->
    <string name="label_article_id">Article type ID:</string>
    <string name="label_article_name">Article type name:</string>
    <string name="label_article_description">Article type description:</string>
    <string name="label_storageLocations"><u>Storage Locations</u></string>
    <string name="status_no_searchResults">The search returned no results</string>

    <!-- Strings related to storage overview -->
    <string name="title_activity_storage_overview">Storage overview</string>
    <string name="label_yardID"><u>Yard ID</u></string>
    <string name="label_yardStatus"><u>Yard status</u></string>

</resources>