<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SearchResultDetailActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_lagerix_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lagerix_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_articleID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:text="@string/label_article_id"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/label_articleID_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:textColor="@android:color/black" />
    </LinearLayout>
    
        <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#d3d3d3" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_articleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:text="@string/label_article_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/label_articleName_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:textColor="@android:color/black" />
    </LinearLayout>
    
        <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#d3d3d3" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_articleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".70"
            android:text="@string/label_article_description"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/label_articleDescription_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#707070" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_yards"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/label_yards"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_searchResultDetailResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_yards_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>